2008-10-10  Alexander Larsson  <alexl@redhat.com>

	* gfileattribute.c (escape_byte_string):
	Upper half of byte is >> 4, not >> 8.
	Found by Kjartan Maraas via sparse

2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 555711 – Wrong fallback order of mimetype icons

	* gcontenttype.c: Don't prefer generic icons over
	default mimetype icons.

	* xdgmime/xdgmimecache.c (xdg_mime_cache_get_icon): 
	* xdgmime/xdgmime.c (xdg_mime_get_icon): Don't fall back
	to generic icons.
	Patch by Krysztof Kosiński

2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 555121 – Improved build-time handling of gio module-dir

	* fam/Makefile.am: Use GIO_MODULE_DIR consistently.
	* Makefile.am: Create the module dir.

2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	* gio/glocalfileinfo.c:
	* gio/tests/live-g-file.c:
	* gio/gsimpleasyncresult.c: Fix gcc warnings.

2008-10-09  Alexander Larsson  <alexl@redhat.com>

	* gunixinputstream.c (g_unix_input_stream_read):
	Actually return -1 in case of cancelled, not old res value.

2008-10-06  Colin Walters  <walters@verbum.org>

	Bug 554745 - GFileAttributeInfoList should be boxed

	* gio/gfileattribute.c: Define a boxed type for GFileAttributeList
	for convenience of bindings.
	* gio/gfileattribute.h: Prototype it.

2008-10-05  Pascal Terjan  <pterjan@linuxfr.org>

	Bug 554970 – segfault when update-desktop-database is not available
	on the system

	* gdesktopappinfo.c (run_update_command): Have the error set before 
	using it.

2008-10-01  David Zeuthen  <davidz@redhat.com>

	* gdesktopappinfo.c (expand_macro): If possible, always pass FUSE
	file:// URIs (such as '/home/davidz/.gvfs/sftp on foo/file.avi')
	instead of the gio URI (such as sftp://foo/file.avi) when using
	g_app_info_launch() and friends. With a sufficiently recent gvfs,
	apps using gio+gvfs will map the FUSE file:// URI back to the gio
	URI (and thus bypass the fuse daemon) thanks the patch from bug
	#530654.  Since Nautilus is an user of g_app_info_launch() it