@@ -758,7 +758,9 @@ g_volume_monitor_get_mount_for_uuid
 #endif
 #if IN_FILE(__G_UNION_VOLUME_MONITOR_C__)
 g_volume_monitor_get 
+#ifndef G_DISABLE_DEPRECATED
 g_volume_monitor_adopt_orphan_mount
+#endif
 #endif
 #endif
 
